# N-queens

./: README.md  queen-sat.cabal
.github/workflows/: haskell-macos.yml  haskell.yml
app/: Main.hs
src/: SatGen.hs
test/: MyLibTest.hs
