cabal-version:      2.4
name:               queen-sat
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             muldrik
maintainer:         muldrik@yandex.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:
    base ^>= 4.14,
    containers ^>= 0.6,
    mtl ^>= 2.2.2,
    picosat == 0.1.6
  ghc-options:
    -Wall

library queen-sat-lib
    import: shared
    exposed-modules:  SatGen
    hs-source-dirs:   src
    build-depends:

executable queen-sat
    import: shared
    main-is:          Main.hs
    build-depends:
        queen-sat-lib,
    hs-source-dirs:   app


test-suite queen-sat-test
    import: shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    
        queen-sat-lib,
        tasty-hunit,
        tasty ^>= 1.4,
